--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+
+label {
+  display: inline-block;
+  clear: left;
+  width: 100px;
+  text-align: left;
+  font-size: large;
+  margin-left: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input, select {
+  display: inline-block;
+  width: 200px;
+  margin-top: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1,h3,h4 {
+  margin-left: 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button {
+  margin-top: 20px;
+  margin-left:120px;
+  width: 200px;
 }
 
-.App-link {
-  color: #61dafb;
+li {
+  list-style: none;
+  margin-left: 0px;
+  border: 1px solid black;
+  margin-bottom: 5px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul li h4, p {
+  margin-left: 5px;
+
 }
+
+ul {
+  padding-inline-start: 20px;
+}
+
+
+
+
